--- a/tape_en_cours/.vscode/settings.json
+++ b/tape_en_cours/.vscode/settings.json
@@ -3,5 +3,8 @@
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "cSpell.words": [
+        "nombre"
+    ]
 }
